@@ -113,6 +113,7 @@ a.view_all_money:hover	{background-color:rgba(0,14,32,0.9); color:#FFF;}
 .map_percent a			{font-weight:bold;}
 #map					{width:100%; height:400px;}
 .map_wrap img			{-webkit-filter:brightness(100%); filter:brightness(100%);}
+.map_percent img		{-webkit-filter:brightness(200%); filter:brightness(200%);}
 
 
 /*	For url #view=map
