@@ -419,5 +419,5 @@ span.span_related-activity:before	{color:rgba(255,255,255,1); border-bottom:3px 
 span.span_related-activity			{color:rgba(255,255,255,1);}
 a.a_related-activity				{color:rgba(255,255,255,1);}
 related-activity					{color:rgba(173,173,173,1);}
-related-activity:hover				{color:rgba(125,125,125,1);}
+related-activity:hover				{color:rgba(255,163,0,1);}
 related-activity:before				{color:rgba(255,255,255,1);}
