@@ -1,6 +1,8 @@
 Development Portal (2014-08-20 shi)
 ==============================
 Savi tables fix for larger numbers
+Fixed image brightness for map icon
+Inspire colourtheme
 
 
 Development Portal (2014-08-19 shi)
